@@ -1038,7 +1038,7 @@ void ast_dial_set_global_timeout(struct ast_dial *dial, int timeout)
 {
 	dial->timeout = timeout;
 
-	if (dial->timeout > 0 && dial->actual_timeout > dial->timeout)
+	if (dial->timeout > 0 && (dial->actual_timeout > dial->timeout || dial->actual_timeout == -1))
 		dial->actual_timeout = dial->timeout;
 
 	return;
@@ -1059,7 +1059,7 @@ void ast_dial_set_timeout(struct ast_dial *dial, int num, int timeout)
 
 	channel->timeout = timeout;
 
-	if (channel->timeout > 0 && dial->actual_timeout > channel->timeout)
+	if (channel->timeout > 0 && (dial->actual_timeout > channel->timeout || dial->actual_timeout == -1))
 		dial->actual_timeout = channel->timeout;
 
 	return;
